--- a/packages/new_year_saju_repository/pubspec.yaml
+++ b/packages/new_year_saju_repository/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   equatable: ^2.0.7
   flutter:
     sdk: flutter
+  saju_local_storage:
+    path: ../saju_local_storage
 
 dev_dependencies:
   flutter_test:
