--- a/packages/saju_local_storage/.gitignore
+++ b/packages/saju_local_storage/.gitignore
@@ -1,44 +1,7 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
+# See https://www.dartlang.org/guides/libraries/private-files
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# VSCode related
-.vscode/*
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Files and directories created by pub
 .dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
 .packages
-.pub-cache/
-.pub/
-/build/
+build/
 pubspec.lock
-
-# Web related
-lib/generated_plugin_registrant.dart
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Test related
-coverage
