--- a/packages/saju_local_storage/pubspec.yaml
+++ b/packages/saju_local_storage/pubspec.yaml
@@ -1,18 +1,12 @@
 name: saju_local_storage
-description: Saju local storage
+description: Application local form storage
 version: 0.1.0+1
 publish_to: none
 
 environment:
   sdk: ^3.5.0
-  flutter: ^3.24.0
-
-dependencies:
-  flutter:
-    sdk: flutter
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   mocktail: ^1.0.4
+  test: ^1.25.8
   very_good_analysis: ^6.0.0
