--- a/packages/yearly_saju_repository/pubspec.yaml
+++ b/packages/yearly_saju_repository/pubspec.yaml
@@ -1,4 +1,4 @@
-name: new_year_saju_repository
+name: yearly_saju_repository
 description: A Very Good Project created by Very Good CLI.
 version: 0.1.0+1
 publish_to: none
