feat: change app and package name

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "byul_mobile",
-    "short_name": "byul_mobile",
+    "name": "saju",
+    "short_name": "saju",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
