--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   http: ^1.2.2
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.0.0
   formz: ^0.8.0
   equatable: ^2.0.0
   yearly_saju_repository:
     path: packages/yearly_saju_repository
+  saju_api:
+    path: packages/saju_api
   saju_local_storage:
     path: packages/saju_local_storage
+  intl: ^0.20.2
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +74,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
+    - assets/config/.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
