--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_dotenv: ^5.2.1
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
@@ -21,6 +22,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.19.0
+  kakao_flutter_sdk: ^1.9.7+3
   models:
     path: packages/models
   path_provider: ^2.1.5
@@ -39,3 +41,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/images/
+    - assets/fonts/
+    - assets/.env
