--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:host="kakaolink"
+          android:scheme="kakao${kakaoApiKey}" />
       </intent-filter>
     </activity>
     <!-- 카카오 로그인 커스텀 URL 스킴 설정 -->
@@ -35,34 +39,12 @@
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
 
-        <!-- "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식의 앱 실행 스킴 설정 -->
+        <!-- "kakao${kakaoApiKey}://oauth" 형식의 앱 실행 스킴 설정 -->
         <!-- 카카오 로그인 Redirect URI -->
-        <data android:scheme="kakao${YOUR_NATIVE_APP_KEY}" android:host="oauth" />
+        <data android:scheme="kakao${kakaoApiKey}" android:host="oauth" />
       </intent-filter>
     </activity>
 
-    <!-- 카카오톡 공유, 카카오톡 메시지 커스텀 URL 스킴 설정 -->
-    <activity
-      android:name=".MainActivity"
-      android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-      android:exported="true"
-      android:hardwareAccelerated="true"
-      android:launchMode="singleTop"
-      android:theme="@style/LaunchTheme"
-      android:windowSoftInputMode="adjustResize">
-      <!-- 생략 -->
-
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-
-        <!-- "kakao${YOUR_NATIVE_APP_KEY}://${PRODUCT_NAME}" 형식의 앱 실행 스킴 설정 -->
-        <!-- 카카오톡 공유, 카카오톡 메시지 -->
-        <data android:host="kakaolink"
-          android:scheme="kakao${YOUR_NATIVE_APP_KEY}" />
-      </intent-filter>
-    </activity>
     <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
     <meta-data
