feat: hive initializer added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.1.7
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
