--- a/packages/api/pubspec.yaml
+++ b/packages/api/pubspec.yaml
@@ -13,5 +13,6 @@ dev_dependencies:
 dependencies:
   dio: ^5.8.0+1
   google_sign_in: ^6.3.0
+  kakao_flutter_sdk: ^1.9.7+3
   models:
     path: ../models
