--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.19.0
   kakao_flutter_sdk: ^1.9.7+3
+  logger: ^2.5.0
   models:
     path: packages/models
   path_provider: ^2.1.5
