--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,18 +8,28 @@ environment:
 
 dependencies:
   bloc: ^9.0.0
+  dio: ^5.8.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_secure_storage: ^9.2.4
+  get_it: ^8.0.3
   go_router: ^16.2.1
+  google_sign_in: ^6.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.20.2
+  kakao_flutter_sdk: ^1.9.7
+  logger: ^2.5.0
 
 dev_dependencies:
   bloc_test: ^10.0.0
+  build_runner: ^2.4.13
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
   mocktail: ^1.0.4
   very_good_analysis: ^9.0.0
 
