--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_dotenv: ^5.2.1
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
@@ -36,3 +37,35 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/images/oauth_logo/
+    - assets/images/item_logo/
+    - assets/images/app_logo/
+    - .env.development
+    - .env.staging
+    - .env.production
+
+  fonts:
+    - family: SSRock
+      fonts:
+        - asset: assets/fonts/SSRockRegular.ttf
+    - family: MapoFlowerIsland
+      fonts:
+        - asset: assets/fonts/MapoFlowerIsland.ttf
+    - family: Hakgyoansim
+      fonts:
+        - asset: assets/fonts/Hakgyoansim.ttf
+    - family: NanumSquareNeo
+      fonts:
+        - asset: assets/fonts/nanum_square_neo/NanumSquareNeo-aLt.ttf
+          weight: 300
+        - asset: assets/fonts/nanum_square_neo/NanumSquareNeo-bRg.ttf
+          weight: 400
+        - asset: assets/fonts/nanum_square_neo/NanumSquareNeo-cBd.ttf
+          weight: 700
+        - asset: assets/fonts/nanum_square_neo/NanumSquareNeo-dEb.ttf
+          weight: 800
+        - asset: assets/fonts/nanum_square_neo/NanumSquareNeo-eHv.ttf
+          weight: 900
